tests/typec-test/test_out/struct-cycle.txt
error: type not found
 --> struct-cycle\root.ctl:2:8
  |
2 |     b: B
  |        ^ this does not exist
  |
  = info: queried 'B'

info: tir repr of functions:
 

